View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023267 | Community | OCCT:Foundation Classes | public | 2012-07-12 14:10 | 2013-04-29 15:22 |
Reporter | Pawel | Assigned To | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.3 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023267: cppcheck warning: Using 'memcpy' on class that contains a virtual method | ||||
Description | This warning is issued by cppcheck in MMgt_StackManager.cxx lines 176: memcpy((char *)aStack, (char *)anElement, sizeof(_Element)); | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0023284 | closed | Using 'memcpy' on class that contains a virtual method |
|
Dear KGV, Fix is implemented into branch CR23267. Please, review. |
|
Dear omy, method Msg() was used only by other removed virtual methods. Please remove it as well. Please do not mess up different issues in single branch. |
|
Dear kgv, I removed the noticed method. Please, review. |
|
>> Please do not mess up different issues in single branch. |
|
Dear kgv, Branch CR23267_1 is correct. Review it please. |
|
Reviewed without remarks. |
|
Dear BugMaster, Branch CR23267_1 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 85 (85 on master) products component : Linux: 9 (9 on master) Windows: 54 (54 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 222954420 / 223244240 Total CPU difference: 7845.300000000371 / 8336.85000000054 Testing on Windows: Total MEMORY difference: 298343236 / 298130444 Total CPU difference: 11326.546875 / 11645.6875 There are not serious differences in images found by testdiff. |
occt: master 9254e07c 2013-02-01 11:39:38
|
0023267: cppcheck warning: Using 'memcpy' on class that contains a virtual method Removed class _BaseElement, thus _Element's functions are not virtual now. Removed redundant Msg() function from _Element class. |
Affected Issues 0023267 |
|
mod - src/MMgt/MMgt_StackManager.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-12 14:10 | Pawel | New Issue | |
2012-07-12 14:10 | Pawel | Assigned To | => bugmaster |
2012-07-16 13:25 | Pawel | Relationship added | related to 0023284 |
2012-10-11 13:27 | oan | Assigned To | bugmaster => isn |
2012-10-11 13:28 | oan | Status | new => assigned |
2012-10-23 18:41 | abv | Target Version | 6.5.4 => 6.6.0 |
2012-10-26 17:53 | abv | Assigned To | isn => omy |
2013-01-25 15:03 |
|
Note Added: 0023153 | |
2013-01-25 15:03 |
|
Assigned To | omy => kgv |
2013-01-25 15:03 |
|
Status | assigned => resolved |
2013-01-25 15:13 | kgv | Note Added: 0023155 | |
2013-01-25 15:13 | kgv | Assigned To | kgv => omy |
2013-01-25 15:13 | kgv | Severity | minor => trivial |
2013-01-25 15:13 | kgv | Reproducibility | have not tried => N/A |
2013-01-25 15:13 | kgv | Status | resolved => assigned |
2013-01-25 16:43 |
|
Note Added: 0023158 | |
2013-01-25 16:43 |
|
Assigned To | omy => kgv |
2013-01-25 16:43 |
|
Status | assigned => resolved |
2013-01-25 16:47 | kgv | Note Added: 0023160 | |
2013-01-25 16:47 | kgv | Assigned To | kgv => omy |
2013-01-25 16:47 | kgv | Status | resolved => assigned |
2013-01-25 17:19 |
|
Note Added: 0023161 | |
2013-01-25 17:19 |
|
Status | assigned => resolved |
2013-01-25 17:19 |
|
Assigned To | omy => kgv |
2013-01-25 17:26 | kgv | Note Added: 0023162 | |
2013-01-25 17:26 | kgv | Assigned To | kgv => bugmaster |
2013-01-25 17:26 | kgv | Status | resolved => reviewed |
2013-01-25 18:20 |
|
Assigned To | bugmaster => mkv |
2013-01-30 18:44 |
|
Note Added: 0023212 | |
2013-01-30 18:45 |
|
Test case number | => Not needed |
2013-01-30 18:45 |
|
Assigned To | mkv => bugmaster |
2013-01-30 18:45 |
|
Status | reviewed => tested |
2013-02-04 14:47 |
|
Changeset attached | => occt master 9254e07c |
2013-02-04 14:47 |
|
Assigned To | bugmaster => omy |
2013-02-04 14:47 |
|
Status | tested => verified |
2013-02-04 14:47 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:22 |
|
Fixed in Version | => 6.6.0 |