0023267: cppcheck warning: Using 'memcpy' on class that contains a virtual method

Removed class _BaseElement, thus _Element's functions are not virtual now.
Removed redundant Msg() function from _Element class.